--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -79,7 +79,7 @@ if ( is_archive() ) {
         isCategory: <%=is_category()%>,
         fancybox_js: "<%- theme.CDN.fancybox_js %>",
         scrollreveal: "<%- theme.CDN.scrollreveal %>",
-        search: <%= theme.search.on %>
+        search: <%= theme.search.onload %>
     }
 </script>
 
