--- a/themes/yelee/layout/_partial/article.ejs
+++ b/themes/yelee/layout/_partial/article.ejs
@@ -79,6 +79,12 @@
         <%- partial('comments/disqus', {
             shortname: config.disqus_shortname
           }) %>
+    <% } else if (theme.valine.on) { %>
+        <%- partial('comments/valine', {
+          key: post.slug,
+          title: post.title,
+          url: config.url+url_for(post.path)
+        }) %>
     <% } %>
 <% } %>
 
